css/style.css
/* ... */
.buttonText {
    margin: 0em;
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    line-height: 160%;
    letter-spacing: -0.02em;
    margin-block-start: 0em;
    margin-block-end: 0em;

}

.snippetHeader {
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    line-height: 160%;
    letter-spacing: -0.02em;
    color: var(--dark);
}

.snippet {
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 500;
    font-size: 12px;
    line-height: 160%;
    letter-spacing: -0.02em;
    color: var(--grey);
}

.primaryHeading {
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 600;
    font-size: 24px;
    line-height: 160%;
    letter-spacing: -0.02em;
    color: var(--extraDark);
}

.secondaryHeading {
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 160%;
    letter-spacing: -0.02em;
    color: var(--dark);
}

.details {
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 160%;
    letter-spacing: -0.02em;
    color: var(--grey);
}



/* Switch Css */

.switch {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 40px;
    height: 40px;
    cursor: pointer;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ffffff00;
    -webkit-transition: .4s;
    transition: .4s;
}

.themeToggleSun {
    opacity: 0;
    position: absolute;
}


#darkMode:checked~.themeToggleSun {
    opacity: 1;
    position: absolute;
    right: 9px;

}

#darkMode:checked~.themeToggleMoon {
    opacity: 0;
    position: absolute;

}









/* ---------------------------------- */

/* ----------------------------------  Layouting */





.spaceBetween {
    justify-content: space-between;
}

.flexCol {
    display: flex;
    flex-direction: column;
}

.flexRow {
    display: flex;
    flex-direction: row;
    width: stretch;
}

.g025 {
    gap: 0.25em;
}

.g05 {
    gap: 0.5em;
}

.g1 {
    gap: 1em;
}

.g3 {
    gap: 3em;
}

.g2 {
    gap: 2em;
}

.centerContent {
    justify-content: center;
    align-items: center;
}



.centerText {
    text-align: center;
}

.mainScreen {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
    padding: 0px;
    margin: 0px;
    background-color: var(--primarycard);
    overflow-y: auto;
    overflow-x: hidden;


}

.content {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 1em;
    padding: 1em 1.5em;
}

.textContent {
    display: flex;
    flex-direction: column;
    gap: 1em;
}

.centerText {
    text-align: center;
}

.heroContent {
    display: flex;
    flex-direction: column;
    justify-content: center;

    gap: 2em;
    width: 50%;

}

.heroImage {

    flex: 1;

    display: flex;
    justify-content: center;
    align-items: center;

}

.heroImage img {
    display: block;
    height: auto;
    width: 100%;
    max-width: 30em;



}

.heroButtons {
    display: flex;
    flex-direction: row;
    gap: 1em;
}

.navbar {
    position: sticky;
    top: 0;
    gap: 2em;

    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 1em 2em;
    width: 100%;
    max-width: 1368px;

    margin: 0 auto;
    background-color: var(--primarycard);

}



.logo {
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 600;
    font-size: 24px;
    line-height: 160%;
    letter-spacing: -0.02em;
    color: var(--logo);
    flex-grow: 1;
}

.nav-links {
    display: flex;
    flex-direction: row;
    gap: 0.5em;
}

.navElement {
    display: flex;
    flex-direction: row;
    gap: 2em;
    align-items: center;
}

section {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 4em;
    padding: 4em 2em;
    Background-color: var(--primarycard);
    max-width: 1368px;
    margin: 0 auto;
}

.caraousel {
    display: flex;
    flex-wrap: wrap;

    gap: 0.5em 0.5em;
    padding: 1em 2em;
    max-width: 1368px;
    margin: 0 auto;

}

.caraouselHero {
    display: flex;
    gap: 0.5em;
    flex-shrink: 0;

    justify-content: center;
    align-items: center;
    padding: 0.25em 0.75em;
    border-radius: 12px;
    background-color: var(--primarycard);
    border: 1px solid var(--stroke);
    color: var(--extraDark);
    width: fit-content;
    height: fit-content;
}
















.container {
    display: flex;
    justify-content: center;
    width: 100%;
    height: 100%;
    max-height: 50vh;
    padding: 1em;
    overflow: hidden;
    
}

.container img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    transition: transform .4s ease;
    transform-origin: center;
}

.container:hover img {
    transform: scale(1.5);
}

.container svg {
    width: 100%;
    height: 100%;
    
    transition: transform .4s ease;
    transform-origin: center;
}

.container:hover svg {
    transform: scale(1.5);
}



.footer {
    display: flex;
    gap: 2em;
    flex-direction: column;
    justify-content: right;
    align-items: center;
    padding: 4em 2em;
    background-color: var(--bg2);
}

.accordionHeader {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 0.5em 1em;
    background-color: var(--primarycard);
    color: var(--extraDark);
    border-bottom: 1px solid var(--stroke);
    cursor: pointer;
}
/* ... */

